[metadata]
name = LaMa
version = 0.1

[options]
install_requires =
    numpy
    scipy
    torch
    torchvision
    opencv-python
    joblib
    matplotlib
    pandas
    albumentations[imgaug]
    pytorch-lightning
    tabulate
    easydict
    kornia
    webdataset
    packaging
    gpustat
    tqdm
    pyyaml
    hydra-core
    scikit-learn
    scikit-image
    tabulate
